--- a/about.html
+++ b/about.html
@@ -160,11 +160,12 @@
       </div>
 
       <div class="flex items-center justify-center">
-        <div class="bg-[#005EB8] text-white p-6 rounded-lg text-center shadow">
-          <h3 class="text-3xl font-bold">10+</h3>
-          <p class="text-sm mt-2">Years of Experience</p>
-        </div>
-      </div>
+  <div class="bg-[#005EB8] text-white p-6 rounded-lg text-center shadow">
+    <h3 class="text-3xl font-bold">Experienced</h3>
+    <p class="text-sm mt-2">in Logistics Solutions</p>
+  </div>
+</div>
+
     </div>
   </div>
 </section>
