--- a/services.html
+++ b/services.html
@@ -182,6 +182,57 @@
           <button onclick="openModal('modal5')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
       </div>
+
+      <div class="bg-white rounded-lg overflow-hidden group">
+    <div class="overflow-hidden">
+      <img src="./static/images/chain.jpg" alt="Supply Chain" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+    </div>
+    <div class="p-6 text-left">
+      <h3 class="text-lg font-semibold mb-2">Supply Chain Solutions</h3>
+      <p class="text-gray-600 text-sm mb-4">Optimize your entire logistics process with our integrated and flexible supply chain solutions tailored to your business.</p>
+      <button onclick="openModal('modal6')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
+    </div>
+  </div>
+
+  <!-- Project Management -->
+  <div class="bg-white rounded-lg overflow-hidden group">
+    <div class="overflow-hidden">
+      <img src="./static/images/project.jpg" alt="Project Management" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+    </div>
+    <div class="p-6 text-left">
+      <h3 class="text-lg font-semibold mb-2">Project Management</h3>
+      <p class="text-gray-600 text-sm mb-4">From planning to execution, we manage logistics projects of any scale with precision, safety, and timely delivery.</p>
+      <button onclick="openModal('modal7')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
+    </div>
+  </div>
+
+  <!-- Consulting -->
+ <div class="bg-white rounded-lg overflow-hidden group">
+  <div class="overflow-hidden">
+    <img src="./static/images/consulting.jpg" alt="Custom Consultation" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+  </div>
+  <div class="p-6 text-left">
+    <h3 class="text-lg font-semibold mb-2">Custom Consultation</h3>
+    <p class="text-gray-600 text-sm mb-4">
+  Tailored logistics advice to solve your unique challenges, streamline operations and enhance efficiency.
+</p>
+
+    <button onclick="openModal('modal8')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
+  </div>
+</div>
+
+
+  <!-- Relocation Services -->
+  <div class="bg-white rounded-lg overflow-hidden group">
+    <div class="overflow-hidden">
+      <img src="./static/images/relocation.jpg" alt="Relocation Services" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+    </div>
+    <div class="p-6 text-left">
+      <h3 class="text-lg font-semibold mb-2">Relocation Services</h3>
+      <p class="text-gray-600 text-sm mb-4">We provide hassle-free domestic and international relocation with secure packing, transport, and delivery.</p>
+      <button onclick="openModal('modal9')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
+    </div>
+  </div>
     </div>
   </div>
   </div>
@@ -225,6 +276,51 @@
       <button onclick="closeModal('modal5')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
     </div>
   </div>
+  <!-- Modal: Supply Chain Solutions -->
+<div id="modal6" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+  <div class="bg-white p-8 rounded w-full max-w-md">
+    <h2 class="text-2xl font-bold mb-4">Supply Chain Solutions</h2>
+    <p class="text-gray-700 text-sm mb-4">
+      We offer end-to-end supply chain solutions that optimize procurement, warehousing, distribution, and inventory management — designed to improve efficiency and reduce operational costs.
+    </p>
+    <button onclick="closeModal('modal6')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
+  </div>
+</div>
+
+<!-- Modal: Project Management -->
+<div id="modal7" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+  <div class="bg-white p-8 rounded w-full max-w-md">
+    <h2 class="text-2xl font-bold mb-4">Project Management</h2>
+    <p class="text-gray-700 text-sm mb-4">
+      Our expert team ensures the successful execution of logistics projects through effective planning, coordination, and resource management — from initial concept to final delivery.
+    </p>
+    <button onclick="closeModal('modal7')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
+  </div>
+</div>
+
+<!-- Modal: Consulting -->
+<div id="modal8" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+  <div class="bg-white p-8 rounded w-full max-w-md">
+    <h2 class="text-2xl font-bold mb-4">Custom Consultation</h2>
+    <p class="text-gray-700 text-sm mb-4">
+      Our custom consultation services are crafted to suit your logistics goals. From analyzing workflows to creating smart strategies, we provide expert advice to help you reduce costs, improve operations, and scale confidently.
+    </p>
+    <button onclick="closeModal('modal8')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
+  </div>
+</div>
+
+
+<!-- Modal: Relocation Services -->
+<div id="modal9" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+  <div class="bg-white p-8 rounded w-full max-w-md">
+    <h2 class="text-2xl font-bold mb-4">Relocation Services</h2>
+    <p class="text-gray-700 text-sm mb-4">
+      We manage complete relocation logistics for individuals and businesses — including packing, secure transport, customs clearance, and doorstep delivery — with minimal disruption.
+    </p>
+    <button onclick="closeModal('modal9')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
+  </div>
+</div>
+
 </section>
 
 
