--- a/index.html
+++ b/index.html
@@ -129,14 +129,15 @@
 
 
 
-
 <div class="relative h-screen overflow-hidden">
   <section class="relative w-full h-full">
     <div id="slidesContainer" class="relative w-full h-full overflow-hidden">
+
+      <!-- Slide 1 -->
       <div class="absolute inset-0 slide" id="slide1">
         <img src="./static/images/view-luxurious-cruise-ship.jpg" class="w-full h-full object-cover zoom-in" />
-        <div class="absolute inset-0 bg-black bg-opacity-80"></div>
-        <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white  md:px-44 z-10">
+        <div class="absolute inset-0 bg-black bg-opacity-80 overlay hidden"></div>
+        <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
           <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Your Cargo,<br>Our Ocean Journey</h2>
           <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
             Reliable ocean freight solutions connecting major ports worldwide.
@@ -149,9 +150,10 @@
         </div>
       </div>
 
+      <!-- Slide 2 -->
       <div class="absolute inset-0 slide hidden" id="slide2">
         <img src="./static/images/vehicle-move.jpg" class="w-full h-full object-cover zoom-in" />
-        <div class="absolute inset-0 bg-black bg-opacity-80"></div>
+        <div class="absolute inset-0 bg-black bg-opacity-80 overlay hidden"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
           <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Truck Freight<br>Across Every Highway</h2>
           <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
@@ -165,10 +167,11 @@
         </div>
       </div>
 
+      <!-- Slide 3 -->
       <div class="absolute inset-0 slide hidden" id="slide3">
         <img src="./static/images/transport-logistics-concept.jpg" class="w-full h-full object-cover zoom-in" />
-        <div class="absolute inset-0 bg-black bg-opacity-80"></div>
-        <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white  md:px-44 z-10">
+        <div class="absolute inset-0 bg-black bg-opacity-80 overlay hidden"></div>
+        <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
           <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Fast,<br> Safe Global Air <br>Delivery</h2>
           <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
             Swift international shipping with guaranteed safety and speed through the skies.
@@ -184,11 +187,10 @@
 
     <!-- Dots -->
     <div class="absolute right-6 top-1/2 max-md:top-[40%] transform -translate-y-1/2 flex flex-col gap-4 z-30">
-  <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="0"></button>
-  <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="1"></button>
-  <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="2"></button>
-</div>
-
+      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="0"></button>
+      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="1"></button>
+      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="2"></button>
+    </div>
   </section>
 </div>
 
@@ -218,7 +220,7 @@
     <div class="flex flex-col justify-start md:mt-0 mt-6">
       <p class="text-md md:text-lg text-white mb-6 mt-6 md:mt-56 leading-relaxed">
         <span class="text-4xl md:text-6xl ">We</span>
-        specialize in reliable and efficient cargo movement by land, sea and air. With years of experience in international logistics, we ensure seamless delivery of garments, spices, FMCG products, and heavy machinery across the globe.
+        specialize in reliable and efficient cargo movement by air,sea and road. With years of experience in international logistics, we ensure seamless delivery of garments, spices, FMCG products, and heavy machinery across the globe.
       </p>
       <a href="about.html">
         <button class="bg-[#F0C479] hover:bg-[#F0C479] text-[#005EB8] font-semibold px-6 py-3 rounded shadow-md transition-transform transform hover:scale-105 w-fit">
@@ -281,7 +283,7 @@
 <section class="py-20 px-6 md:px-20 ">
   <div class="max-w-7xl mx-auto text-center mb-16">
     <h2 class="text-4xl md:text-4xl font-bold text-[#005EB8] mb-4">
-      10+ Years of Trusted Experience
+      Trusted Experts in the Field
     </h2>
     <p class="text-gray-600 text-lg max-w-2xl mx-auto">
       Delivering excellence in global logistics — from garments to machinery with unmatched care.
@@ -289,7 +291,6 @@
   </div>
 
   <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-4 max-w-7xl mx-auto">
-    <!-- Card Template -->
     <div class="relative group bg-white p-6 rounded-3xl shadow-md hover:shadow-xl transition duration-300">
       <div class="flex flex-col items-center text-center space-y-4">
         <div class="text-[#005EB8] bg-[#e6f0fa] p-4 rounded-full group-hover:bg-[#005EB8] group-hover:text-white transition duration-300">
@@ -375,7 +376,7 @@
       <div class="relative">
         <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
         <h3 class="text-xl font-semibold text-[#005EB8]">Step 2: Planning with Precision</h3>
-        <p class="text-gray-700 mt-2">Our experts design customized logistics strategies to match your scale, budget, and timeline — using cutting-edge tools and real-time data.</p>
+        <p class="text-gray-700 mt-2">Our experts design customized logistics strategies to match your scale, budget and timeline — using cutting-edge tools and real-time data.</p>
       </div>
 
       <!-- Step 3 -->
@@ -389,7 +390,7 @@
       <div class="relative">
         <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
         <h3 class="text-xl font-semibold text-[#005EB8]">Step 4: Support & Satisfaction</h3>
-        <p class="text-gray-700 mt-2">Our support doesn’t end at delivery. We assist with documentation, refunds, claims, and are always ready to resolve your queries.</p>
+        <p class="text-gray-700 mt-2">We assist with documentation, refunds and claims. We are always ready to resolve your queries.</p>
       </div>
     </div>
   </div>
@@ -683,7 +684,24 @@
   startSlider();
   showSlide(0);
 </script>
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const slides = document.querySelectorAll('.slide');
 
+    slides.forEach(slide => {
+      const img = slide.querySelector('img');
+      const overlay = slide.querySelector('.overlay');
+
+      if (img.complete) {
+        overlay.classList.remove('hidden');
+      } else {
+        img.addEventListener('load', () => {
+          overlay.classList.remove('hidden');
+        });
+      }
+    });
+  });
+</script>
 
  <script src="./static/js/script.js"></script>
 </body>
