--- a/services.html
+++ b/services.html
@@ -189,7 +189,9 @@
     </div>
     <div class="p-6 text-left">
       <h3 class="text-lg font-semibold mb-2">Supply Chain Solutions</h3>
-      <p class="text-gray-600 text-sm mb-4">Optimize your entire logistics process with our integrated and flexible supply chain solutions tailored to your business.</p>
+<p class="text-gray-600 text-sm mb-4">
+  Streamline logistics with our flexible, end-to-end supply chain solutions tailored to meet your business needs.
+</p>
       <button onclick="openModal('modal6')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
     </div>
   </div>
