--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
           <div class="absolute inset-0 bg-black bg-opacity-40 translate-x-full group-hover:translate-x-0 transition-transform duration-500 ease-in-out"></div>
         </div>
         <div class="w-full sm:w-1/2 p-6 flex flex-col justify-center px-10">
-          <h3 class="text-2xl font-bold text-white mb-6">Worldwide Coverage</h3>
-          <p class="text-gray-200 mb-4">We offer end-to-end logistics solutions across the globe by land, air, and sea.</p>
+          <h3 class="text-2xl font-bold text-white mb-6">Freight Forwarding</h3>
+          <p class="text-gray-200 mb-4">We coordinate complete freight solutions across land and sea, managing logistics, documents, and cargo flow.</p>
           <a href="services.html" class="text-[#F0C479] font-medium hover:underline">Learn More</a>
         </div>
       </div>
@@ -263,8 +263,8 @@
           <div class="absolute inset-0 bg-black bg-opacity-40 translate-x-full group-hover:translate-x-0 transition-transform duration-500 ease-in-out"></div>
         </div>
         <div class="w-full sm:w-1/2 p-6 flex flex-col justify-center px-10">
-          <h3 class="text-2xl font-bold text-white mb-6">Refund & Duty Drawback</h3>
-          <p class="text-gray-200 mb-4">We handle complex refund settlements and duty drawback processes with ease and accuracy.</p>
+          <h3 class="text-2xl font-bold text-white mb-6">Custom Clearance</h3>
+          <p class="text-gray-200 mb-4">We manage all customs procedures, ensuring fast and hassle-free import/export clearance at global borders.</p>
           <a href="services.html" class="text-[#F0C479] font-medium hover:underline">Learn More</a>
         </div>
       </div>
@@ -438,19 +438,35 @@
       <h3 class="font-semibold text-lg mb-3">Our Services</h3>
       <ul class="space-y-2">
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Cargo Transport
+    <i class="fas fa-angle-right mr-2"></i>Custom Clearance
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Reliable Delivery</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Import & Export
+    <i class="fas fa-angle-right mr-2"></i>Transportation
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Global Trade Help</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Duty Drawback
+    <i class="fas fa-angle-right mr-2"></i>Warehouse Handling
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Tax Refund Process</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Cargo Insurance
+    <i class="fas fa-angle-right mr-2"></i>Freight Forwarding
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Supply Chain Solutions
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Project Management
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Custom Consultation
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Relocation Services
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
 </ul>
