--- a/about.html
+++ b/about.html
@@ -147,26 +147,31 @@
 </p>      </div>
     </div>
 
-    <div class="grid grid-cols-2 gap-6 relative">
-      <div class="flex flex-col space-y-6">
-        <div class="bg-[#005EB8] text-white p-6 rounded-lg text-center shadow">
-          <h3 class="text-3xl font-bold">2K+</h3>
-          <p class="text-sm mt-2">Happy Clients</p>
-        </div>
-        <div class="bg-accent text-white p-6 rounded-lg text-center shadow">
-          <h3 class="text-3xl font-bold">10K+</h3>
-          <p class="text-sm mt-2">Shipments Delivered</p>
-        </div>
-      </div>
+   <div class="grid grid-cols-2 gap-6 relative">
+  <!-- Left Column -->
+  <div class="flex flex-col space-y-6">
 
-      <div class="flex items-center justify-center">
-  <div class="bg-[#005EB8] text-white p-6 rounded-lg text-center shadow">
-    <h3 class="text-3xl font-bold">Experienced</h3>
-    <p class="text-sm mt-2">in Logistics Solutions</p>
+    <div class="bg-[#005EB8] text-white p-6 rounded-lg text-center shadow">
+      <h3 class="text-2xl font-bold">Reliable Delivery</h3>
+      <p class="text-sm mt-2">On-time & secure shipments</p>
+    </div>
+
+    <div class="bg-accent text-white p-6 rounded-lg text-center shadow">
+      <h3 class="text-2xl font-bold">Warehouse Handling</h3>
+      <p class="text-sm mt-2">Safe storage & inventory care</p>
+    </div>
+
+  </div>
+
+  <!-- Right Column -->
+  <div class="flex items-center justify-center">
+    <div class="bg-[#005EB8] text-white p-6 rounded-lg text-center shadow">
+      <h3 class="text-2xl font-bold">Expert Support</h3>
+      <p class="text-sm mt-2">Personalized customer service</p>
+    </div>
   </div>
 </div>
 
-    </div>
   </div>
 </section>
 
@@ -234,19 +239,35 @@
       <h3 class="font-semibold text-lg mb-3">Our Services</h3>
       <ul class="space-y-2">
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Cargo Transport
+    <i class="fas fa-angle-right mr-2"></i>Custom Clearance
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Reliable Delivery</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Import & Export
+    <i class="fas fa-angle-right mr-2"></i>Transportation
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Global Trade Help</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Duty Drawback
+    <i class="fas fa-angle-right mr-2"></i>Warehouse Handling
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Tax Refund Process</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Cargo Insurance
+    <i class="fas fa-angle-right mr-2"></i>Freight Forwarding
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Supply Chain Solutions
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Project Management
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Custom Consultation
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Relocation Services
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
 </ul>
@@ -271,6 +292,7 @@
     <p>Powered by <span class="font-semibold">N-ME </span></p>
   </div>
 </footer>
+
 
 <a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 258"
