--- a/services.html
+++ b/services.html
@@ -172,7 +172,7 @@
         </div>
       </div>
 
-      <div class="bg-white rounded-lg overflow-hidden group">
+      <!-- <div class="bg-white rounded-lg overflow-hidden group">
         <div class="overflow-hidden">
           <img src="./static/images/cargo.jpg" alt="Air Cargo" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
         </div>
@@ -181,7 +181,7 @@
           <p class="text-gray-600 text-sm mb-4">We provide fast, reliable air cargo solutions for urgent deliveries with full support and real-time tracking.</p>
           <button onclick="openModal('modal5')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
-      </div>
+      </div> -->
 
       <div class="bg-white rounded-lg overflow-hidden group">
     <div class="overflow-hidden">
@@ -375,19 +375,35 @@
       <h3 class="font-semibold text-lg mb-3">Our Services</h3>
       <ul class="space-y-2">
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Cargo Transport
+    <i class="fas fa-angle-right mr-2"></i>Custom Clearance
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Reliable Delivery</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Import & Export
+    <i class="fas fa-angle-right mr-2"></i>Transportation
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Global Trade Help</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Duty Drawback
+    <i class="fas fa-angle-right mr-2"></i>Warehouse Handling
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Tax Refund Process</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Cargo Insurance
+    <i class="fas fa-angle-right mr-2"></i>Freight Forwarding
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Supply Chain Solutions
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Project Management
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Custom Consultation
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Relocation Services
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
 </ul>
@@ -412,6 +428,7 @@
     <p>Powered by <span class="font-semibold">N-ME </span></p>
   </div>
 </footer>
+
 
 <a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 258"
