--- a/about.html
+++ b/about.html
@@ -184,8 +184,8 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 text-left">
       <div class="bg-white p-6 rounded shadow">
-        <h3 class="text-xl font-semibold mb-2 text-[#005EB8]">Years of Experience</h3>
-        <p class="text-gray-600">Over a decade of hands-on expertise handling diverse logistics challenges worldwide.</p>
+        <h3 class="text-xl font-semibold mb-2 text-[#005EB8]">Smart Logistics Planning</h3>
+        <p class="text-gray-600">Efficient routes and timing for faster, smoother deliveries..</p>
       </div>
       <div class="bg-white p-6 rounded shadow">
         <h3 class="text-xl font-semibold mb-2 text-[#005EB8]">End-to-End Solutions</h3>
