--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-straight/css/uicons-thin-straight.css'>
 <link rel="stylesheet" href="./static/css/style.css">
 
 <style>
@@ -133,6 +133,34 @@
   <section class="relative w-full h-full">
     <div id="slidesContainer" class="relative w-full h-full overflow-hidden">
 
+
+
+
+<!-- Slide 0 -->
+<div class="absolute inset-0 slide" id="slide0">
+  <img src="./static/images/evs-bg.jpg" class="w-full h-full object-cover zoom-in" />
+  <div class="absolute inset-0 bg-black bg-opacity-60 overlay hidden"></div>
+  <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
+    <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">
+      Welcome to <br>EVS Logistics
+    </h2>
+    <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
+      Simplifying global logistics with innovative, end-to-end solutions.
+    </p>
+    <a href="#explore" class="slide-in-bottom">
+      <button class="bg-[#005EB8] hover:bg-[#F0C479] text-white font-semibold px-6 py-3 rounded shadow-md transition-transform transform hover:scale-105">
+        Explore Now
+      </button>
+    </a>
+  </div>
+</div>
+
+
+
+
+
+
+
       <!-- Slide 1 -->
       <div class="absolute inset-0 slide" id="slide1">
         <img src="./static/images/view-luxurious-cruise-ship.jpg" class="w-full h-full object-cover zoom-in" />
@@ -183,13 +211,38 @@
           </a>
         </div>
       </div>
+
+<!-- Slide 4 -->
+<div class="absolute inset-0 slide hidden" id="slide4">
+  <img src="./static/images/warehouse.jpg" class="w-full h-full object-cover zoom-in" />
+  <div class="absolute inset-0 bg-black bg-opacity-60 overlay hidden"></div>
+  <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
+    <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">
+      Smart <br> Warehouse <br>Handling
+    </h2>
+    <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
+      Organized storage with efficient sorting and dispatch systems tailored to your goods.
+    </p>
+    <a href="#explore" class="slide-in-bottom">
+      <button class="bg-[#005EB8] hover:bg-[#F0C479] text-white font-semibold px-6 py-3 rounded shadow-md transition-transform transform hover:scale-105">
+        Explore Now
+      </button>
+    </a>
+  </div>
+</div>
+
+      
     </div>
 
     <!-- Dots -->
     <div class="absolute right-6 top-1/2 max-md:top-[40%] transform -translate-y-1/2 flex flex-col gap-4 z-30">
       <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="0"></button>
+
+      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="0"></button>
       <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="1"></button>
       <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="2"></button>
+      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="3"></button>
+
     </div>
   </section>
 </div>
@@ -212,7 +265,7 @@
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-start relative z-10">
 
     <div class="order-1 md:order-none">
-      <img src="https://images.pexels.com/photos/209251/pexels-photo-209251.jpeg?auto=compress&cs=tinysrgb&w=600"
+      <img src="./static/images/specialise.jpg"
            alt="Cargo Illustration"
            class="w-full h-auto rounded-lg shadow-lg object-cover" />
     </div>
@@ -220,8 +273,7 @@
     <div class="flex flex-col justify-start md:mt-0 mt-6">
       <p class="text-md md:text-lg text-white mb-6 mt-6 md:mt-56 leading-relaxed">
         <span class="text-4xl md:text-6xl ">We</span>
-        specialize in reliable and efficient cargo movement by air,sea and road. With years of experience in international logistics, we ensure seamless delivery of garments, spices, FMCG products, and heavy machinery across the globe.
-      </p>
+ specialize in reliable and efficient cargo movement by air, sea, and road. With years of experience in international logistics, we ensure seamless delivery of garments, spices, FMCG products, seafood and heavy machinery across the globe.      </p>
       <a href="about.html">
         <button class="bg-[#F0C479] hover:bg-[#F0C479] text-[#005EB8] font-semibold px-6 py-3 rounded shadow-md transition-transform transform hover:scale-105 w-fit">
           Know Now
@@ -292,24 +344,29 @@
 
   <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-4 max-w-7xl mx-auto">
     <div class="relative group bg-white p-6 rounded-3xl shadow-md hover:shadow-xl transition duration-300">
-      <div class="flex flex-col items-center text-center space-y-4">
-        <div class="text-[#005EB8] bg-[#e6f0fa] p-4 rounded-full group-hover:bg-[#005EB8] group-hover:text-white transition duration-300">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1"><path d="m11.5 5.5l-3-2l-3 2l2.5 6l-6.5 10l4 2h12l4-2l-6.5-10l2.5-6l-3-2zm3-2v-3m-6 3v-3"/><path d="m15 11.5l-3.5.5l-3.5-.5"/></g></svg>
-        </div>
-        <h3 class="text-xl font-semibold text-gray-800">Garments</h3>
-        <p class="text-gray-600">Efficient and secure transport of textile goods globally.</p>
+    <div class="flex flex-col items-center text-center space-y-4">
+      <div class="text-[#005EB8] bg-[#e6f0fa] p-4 rounded-full group-hover:bg-[#005EB8] group-hover:text-white transition duration-300">
+        <!-- General Icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-width="1.5"><path d="M5 11h14M5 15h14M5 7h14"/></g></svg>
       </div>
+      <h3 class="text-xl font-semibold text-gray-800">Product Categories</h3>
+      <p class="text-gray-600">
+        Garments, spices, FMCG, machinery and more.
+      </p>
     </div>
+  </div>
 
-    <div class="relative group bg-white p-6 rounded-3xl shadow-md hover:shadow-xl transition duration-300">
-      <div class="flex flex-col items-center text-center space-y-4">
-        <div class="text-[#005EB8] bg-[#e6f0fa] p-4 rounded-full group-hover:bg-[#005EB8] group-hover:text-white transition duration-300">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 512 512"><path fill="currentColor" d="M207.375 13.78v.064c83.385 68.488-50.732 105.97-37.22 175.22c-20.55-13.762-28.066-46.66-8.78-74.97c-51.085 21.935-73.42 51.99-72.156 97.562c.945 34.13 14.638 61.58 35.843 82.188c-9.787-27.448-12.016-55.74-5.188-79.813c35.742 49.332 137.785-19.994 147.094-79.28c-.044 63.674 63.996 118.35 112.717 52.375c8.932 36.97 6.638 75.307-3.218 105.688c19.407-20.337 31.706-47.33 32.374-81.157c.93-47.127-21.048-90.8-62.72-112.75c18.15 38.878-.498 65.598-43.655 83.75c40.28-67.494 16.386-154.454-95.095-168.875zm42.938 226.314c-5.97-.086-12.564 2.295-20.657 8.375c-38.238 28.725-88.54 77.01-99.156 108.718c-18.667-4.37-43.156 2.323-43.156 20.53c0 2.01.32 3.89.875 5.626c-9.91-.4-20.22 3.9-20.22 13.03c0 16.998 35.74 17.686 38.063 1.657c10.356 2.978 22.947 2.34 32.218-2.03c-.75 1.842-1.155 3.867-1.155 6.094c0 22.752 42.915 25.947 54.25 9.094c9.533 6.947 29.795 4.92 32.844-6.25c15.97 1.403 32.385 1.755 48.436.968c8.543 5.77 24.793 4.8 30.625-3c12.788-1.938 25.004-4.72 36.158-8.406c1.9 16.216 38.093 15.92 38.093-1.344c0-.75-.047-1.47-.186-2.156c11.238 3.032 26.594-1 26.594-12.25c0-11.025-15.614-15.103-26.875-12.03c.36-28.628-58.605-80.767-105.063-116.595c-7.39-5.698-14.014-9.92-21.688-10.03zM440 352.5c-9.547-.042-19.094 4.28-19.094 13.063c0 17.567 38.188 17.727 38.188 0c0-8.617-9.547-13.02-19.094-13.063m-403.344 10c-9.547-.042-19.093 4.28-19.093 13.063c0 17.567 38.187 17.727 38.187 0c0-8.616-9.547-13.02-19.094-13.063m430.563 20.406c-9.548-.042-19.095 4.28-19.095 13.063c0 17.566 38.188 17.725 38.188 0c0-8.618-9.547-13.022-19.094-13.064zm-49.69 25.438c-10.747-.047-21.5 4.8-21.5 14.687c0 19.776 43 19.955 43 0c0-9.7-10.75-14.64-21.5-14.686zm-79.967 2.97c-9.548-.02-19.094 4.385-19.094 13.248c0 12.037 18.638 15.825 29.874 11.032c9.403 8.896 34.72 6.462 34.72-7.844c-.002-12.274-18.61-16.01-29.845-11.125c-3.628-3.506-9.637-5.3-15.658-5.313zm-87.22 1.623c-9.546-.04-19.093 4.248-19.093 13.032c0 17.566 38.188 17.725 38.188 0c0-8.618-9.547-12.99-19.094-13.033zm-129.124 14.72c-11.25-.024-22.5 5.12-22.5 15.562c0 12.422 16.83 17.38 29.905 14.624c8.686 9.834 35.5 7.69 35.5-7.03c0-9.57-11.34-13.963-21.656-13.127c-3.226-6.658-12.237-10.012-21.25-10.03zM294.75 439c-8.405-.037-16.8 2.873-20.25 8.78c-14.795-4.1-35.25 1.04-35.25 15.783c0 21.294 42.68 23.124 49.313 5c12.56 2.32 28.093-2.493 28.093-14.594c0-9.88-10.958-14.922-21.906-14.97zm-97 22.656c-10.748-.047-21.47 4.8-21.47 14.688c0 19.776 42.97 19.955 42.97 0c0-9.7-10.752-14.64-21.5-14.688m228.125 1.406c-9.547-.04-19.094 4.28-19.094 13.063c0 17.567 38.19 17.726 38.19 0c0-8.616-9.548-13.02-19.095-13.063z"/></svg>
-        </div>
-        <h3 class="text-xl font-semibold text-gray-800">Spices</h3>
-        <p class="text-gray-600">Preserving aroma and freshness in every shipment.</p>
-      </div>
+<div class="relative group bg-white p-6 rounded-3xl shadow-md hover:shadow-xl transition duration-300">
+  <div class="flex flex-col items-center text-center space-y-4">
+    <!-- Circular Background Icon Container -->
+    <div class="flex items-center justify-center w-16 h-16 text-[#005EB8] bg-[#e6f0fa] rounded-full group-hover:bg-[#005EB8] group-hover:text-white transition duration-300">
+      <i class="fi fi-ts-cumin text-2xl"></i>
     </div>
+    <h3 class="text-xl font-semibold text-gray-800">Spices</h3>
+    <p class="text-gray-600">Preserving aroma and freshness in every shipment.</p>
+  </div>
+</div>
+
 
     <div class="relative group bg-white p-6 rounded-3xl shadow-md hover:shadow-xl transition duration-300">
       <div class="flex flex-col items-center text-center space-y-4">
@@ -322,14 +379,16 @@
     </div>
 
     <div class="relative group bg-white p-6 rounded-3xl shadow-md hover:shadow-xl transition duration-300">
-      <div class="flex flex-col items-center text-center space-y-4">
-        <div class="text-[#005EB8] bg-[#e6f0fa] p-4 rounded-full group-hover:bg-[#005EB8] group-hover:text-white transition duration-300">
-         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><g fill="currentColor"><path fill-rule="evenodd" d="M29.712 24.189c.371-.125.763-.19 1.158-.19h1.112a.25.25 0 0 0 .25-.266l-.45-6.518a.48.48 0 0 0-.499-.453c-4.266.216-7.694 3.386-7.957 7.734l-.035.579a.5.5 0 0 0 .616.516zm.188-5.193c-2.08.572-3.69 2.099-4.311 4.131l3.578-.864q.463-.147.944-.212z" clip-rule="evenodd"/><path fill-rule="evenodd" d="M10.5 6a3.5 3.5 0 0 0-3.114 5.1l-1.16 13.276l-.004.064l-.082 2.32a4.875 4.875 0 0 0 4.296 5.013l.18.022a4.88 4.88 0 0 0 4.8-2.405l2.195-3.806c.495-.857-.278-1.889-1.24-1.655l-1.681.408l-2.548-.165l-1.066-.127l1.692-11.222c1.815.562 3.607 1.158 5.153 2.002c1.495.817 2.688 1.829 3.417 3.198a11.95 11.95 0 0 0-2.218 6.311l-.311 5.61A1 1 0 0 0 19.807 31h21.65a.5.5 0 0 0 .498-.541l-.59-7.084A1.5 1.5 0 0 0 39.87 22h-3.826a.05.05 0 0 1-.05-.043l-1.004-7.232A2 2 0 0 0 33.009 13h-1.907a12 12 0 0 0-5.091 1.131c-2.914-4.408-8.012-5.65-12.649-6.646A3.5 3.5 0 0 0 10.5 6M9 9.5a1.5 1.5 0 1 1 3 0a1.5 1.5 0 0 1-3 0m1.977 3.468a3.54 3.54 0 0 1-1.971-.302L7.971 24.503l-.082 2.319a3.125 3.125 0 0 0 2.754 3.213l.18.022a3.13 3.13 0 0 0 3.077-1.541l1.466-2.542l-.356.086q-.166.04-.338.03l-2.69-.175l-1.753-.209a1.125 1.125 0 0 1-.98-1.285zm7.903.102c-1.633-.892-3.481-1.521-5.22-2.064c.194-.407.313-.857.336-1.332c4.254.962 8.036 2.158 10.278 5.457a12 12 0 0 0-1.563 1.29c-.967-1.469-2.336-2.534-3.831-3.35m2.237 11.375A10 10 0 0 1 31.102 15h1.907l1.004 7.232A2.05 2.05 0 0 0 36.043 24h3.367l.417 5H20.864z" clip-rule="evenodd"/><path d="M23.5 39a1.5 1.5 0 1 0 0-3a1.5 1.5 0 0 0 0 3m7.5-1.5a1.5 1.5 0 1 1-3 0a1.5 1.5 0 0 1 3 0m4.5 1.5a1.5 1.5 0 1 0 0-3a1.5 1.5 0 0 0 0 3"/><path fill-rule="evenodd" d="M21.5 33a4.5 4.5 0 1 0 0 9h16a4.5 4.5 0 1 0 0-9zm16 2h-16a2.5 2.5 0 0 0 0 5h16a2.5 2.5 0 0 0 0-5" clip-rule="evenodd"/></g></svg>
-        </div>
-        <h3 class="text-xl font-semibold text-gray-800">Machinery</h3>
-        <p class="text-gray-600">Heavy-duty handling for your industrial shipments.</p>
-      </div>
+  <div class="flex flex-col items-center text-center space-y-4">
+    <div class="flex items-center justify-center w-16 h-16 text-[#005EB8] bg-[#e6f0fa] rounded-full group-hover:bg-[#005EB8] group-hover:text-white transition duration-300">
+      <!-- Optional: Replace with seafood-relevant SVG or icon -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M18.7 4.6c-1.1-.3-2.3.3-3.3 1.3c-.9.9-1.6 2.1-2 3.2c-1.2-.5-2.3-1.2-3.2-2.1c-.9-.9-1.5-2-1.8-3.1c0 0-4.5 3.4-4.2 7.6c.2 2.3 1.6 4.6 3.6 6c1.9 1.4 4.2 1.8 6.3 1.2c2.6-.7 5.6-3.2 6.6-5.2c1.2-2.3 1-7.3-2-8.9zm-4.6 6.9c.3-.9.9-1.8 1.6-2.5c.4-.4.8-.6 1.2-.8c.2.4.3.9.3 1.5c0 .8-.2 1.6-.7 2.2c-.4.7-1.2 1.4-2.4 1.9c0-.8 0-1.5 0-2.3zm2.2 6c-.6.2-1.2-.1-1.5-.7s.1-1.2.7-1.5s1.2.1 1.5.7c.2.6-.1 1.3-.7 1.5z"/></svg>
     </div>
+    <h3 class="text-xl font-semibold text-gray-800">Seafood</h3>
+    <p class="text-gray-600">Fresh, chilled, and safe seafood delivery.</p>
+  </div>
+</div>
+
   </div>
 </section>
 
@@ -369,14 +428,14 @@
       <div class="relative">
         <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
         <h3 class="text-xl font-semibold text-[#005EB8]">Step 1: Understanding Your Needs</h3>
-        <p class="text-gray-700 mt-2">We begin by listening to you. Whether it’s international cargo or local transport, our team ensures we understand your business goals and delivery expectations.</p>
+        <p class="text-gray-700 mt-2">We begin by listening to you. Whether it’s international cargo transport, our team ensures we understand your business goals and delivery expectations.</p>
       </div>
 
       <!-- Step 2 -->
       <div class="relative">
         <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
         <h3 class="text-xl font-semibold text-[#005EB8]">Step 2: Planning with Precision</h3>
-        <p class="text-gray-700 mt-2">Our experts design customized logistics strategies to match your scale, budget and timeline — using cutting-edge tools and real-time data.</p>
+        <p class="text-gray-700 mt-2">Our experts design customized logistics strategies to match your scale, budget and timeline — using innovative tools and real-time data.</p>
       </div>
 
       <!-- Step 3 -->
@@ -390,12 +449,11 @@
       <div class="relative">
         <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
         <h3 class="text-xl font-semibold text-[#005EB8]">Step 4: Support & Satisfaction</h3>
-        <p class="text-gray-700 mt-2">We assist with documentation, refunds and claims. We are always ready to resolve your queries.</p>
+        <p class="text-gray-700 mt-2">We assist with documentation, refunds and claims. We are always ready to resolve your concerns.</p>
       </div>
     </div>
   </div>
 </section>
-
 
 
 
@@ -469,6 +527,10 @@
     <i class="fas fa-angle-right mr-2"></i>Relocation Services
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Dutyback Clearance
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
 </ul>
 
     </div>
@@ -477,8 +539,8 @@
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
       <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments <br> Kochi , Kerala</p>
       <p class="mt-2">
-  <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
-  <span class="inline-block min-w-[45px]"></span> +91 8129033332<br>
+  <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8129033332<br>
+  <span class="inline-block min-w-[45px]"></span> +91 8589961888<br>
   <span class="inline-block min-w-[45px]"></span> +91 4842320046
 </p>
 
@@ -492,7 +554,8 @@
   </div>
 </footer>
 
-<a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
+
+<a href="https://wa.me/918129033332" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 258"
     class="w-12 h-12 hover:scale-110 transition-transform duration-300">
     <defs>
