--- a/about.html
+++ b/about.html
@@ -203,7 +203,6 @@
 
 
 
-
 <footer class="bg-[#005EB8] text-white">
   <div class="max-w-7xl mx-auto px-6 py-20 grid grid-cols-1 md:grid-cols-4 gap-8 gap-y-6 text-sm" style="line-height: 2rem;">
     
@@ -270,6 +269,10 @@
     <i class="fas fa-angle-right mr-2"></i>Relocation Services
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Dutyback Clearance
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
 </ul>
 
     </div>
@@ -278,8 +281,8 @@
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
       <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments <br> Kochi , Kerala</p>
       <p class="mt-2">
-  <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
-  <span class="inline-block min-w-[45px]"></span> +91 8129033332<br>
+  <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8129033332<br>
+  <span class="inline-block min-w-[45px]"></span> +91 8589961888<br>
   <span class="inline-block min-w-[45px]"></span> +91 4842320046
 </p>
 
@@ -294,7 +297,7 @@
 </footer>
 
 
-<a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
+<a href="https://wa.me/918129033332" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 258"
     class="w-12 h-12 hover:scale-110 transition-transform duration-300">
     <defs>
