--- a/services.html
+++ b/services.html
@@ -235,7 +235,27 @@
       <button onclick="openModal('modal9')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
     </div>
   </div>
+
+
+<div class="bg-white rounded-lg overflow-hidden group">
+  <div class="overflow-hidden">
+    <img src="./static/images/duty.jpg" alt="Dutyback Clearance" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+  </div>
+  <div class="p-6 text-left">
+    <h3 class="text-lg font-semibold mb-2">Dutyback Clearance</h3>
+    <p class="text-gray-600 text-sm mb-4">We handle dutyback clearance efficiently—managing refund processes for previously paid duties on qualified exports.</p>
+    <button onclick="openModal('modal10')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
+  </div>
+</div>
+
+
+
+
+
     </div>
+
+
+
   </div>
   </div>
 
@@ -323,6 +343,19 @@
   </div>
 </div>
 
+
+
+<div id="modal10" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+  <div class="bg-white p-8 rounded w-full max-w-md">
+    <h2 class="text-2xl font-bold mb-4">Dutyback Clearance</h2>
+    <p class="text-gray-700 text-sm mb-4">
+      We handle Dutyback Clearance services with precision—ensuring accurate documentation, smooth processing, and timely refunds of duties paid on imported goods as per applicable policies.
+    </p>
+    <button onclick="closeModal('modal10')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
+  </div>
+</div>
+
+
 </section>
 
 
@@ -406,6 +439,10 @@
     <i class="fas fa-angle-right mr-2"></i>Relocation Services
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Dutyback Clearance
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
 </ul>
 
     </div>
@@ -414,8 +451,8 @@
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
       <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments <br> Kochi , Kerala</p>
       <p class="mt-2">
-  <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
-  <span class="inline-block min-w-[45px]"></span> +91 8129033332<br>
+  <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8129033332<br>
+  <span class="inline-block min-w-[45px]"></span> +91 8589961888<br>
   <span class="inline-block min-w-[45px]"></span> +91 4842320046
 </p>
 
@@ -430,7 +467,7 @@
 </footer>
 
 
-<a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
+<a href="https://wa.me/918129033332" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 258"
     class="w-12 h-12 hover:scale-110 transition-transform duration-300">
     <defs>
