--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
       <!-- Slide 2 -->
       <div class="absolute inset-0 slide hidden" id="slide2">
-        <img src="./static/images/vehicle-move.jpg" class="w-full h-full object-cover zoom-in" />
+        <img src="./static/images/carousel1.jpg" class="w-full h-full object-cover zoom-in" />
         <div class="absolute inset-0 bg-black bg-opacity-60 overlay hidden"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
           <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Truck Freight<br>Across Every Highway</h2>
@@ -197,7 +197,7 @@
 
       <!-- Slide 3 -->
       <div class="absolute inset-0 slide hidden" id="slide3">
-        <img src="./static/images/transport-logistics-concept.jpg" class="w-full h-full object-cover zoom-in" />
+        <img src="./static/images/air.jpg" class="w-full h-full object-cover zoom-in" />
         <div class="absolute inset-0 bg-black bg-opacity-60 overlay hidden"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
           <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Fast,<br> Safe Global Air <br>Delivery</h2>
