--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 
       <!-- Slide 1 -->
-      <div class="absolute inset-0 slide" id="slide1">
+      <!-- <div class="absolute inset-0 slide" id="slide1">
         <img src="./static/images/view-luxurious-cruise-ship.jpg" class="w-full h-full object-cover zoom-in" />
         <div class="absolute inset-0 bg-black bg-opacity-60 overlay hidden"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
@@ -176,7 +176,7 @@
             </button>
           </a>
         </div>
-      </div>
+      </div> -->
 
       <!-- Slide 2 -->
       <div class="absolute inset-0 slide hidden" id="slide2">
