--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 
       <!-- Slide 1 -->
-      <!-- <div class="absolute inset-0 slide" id="slide1">
+      <div class="absolute inset-0 slide" id="slide1">
         <img src="./static/images/view-luxurious-cruise-ship.jpg" class="w-full h-full object-cover zoom-in" />
         <div class="absolute inset-0 bg-black bg-opacity-60 overlay hidden"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
@@ -176,7 +176,7 @@
             </button>
           </a>
         </div>
-      </div> -->
+      </div>
 
       <!-- Slide 2 -->
       <div class="absolute inset-0 slide hidden" id="slide2">
@@ -238,10 +238,10 @@
     <div class="absolute right-6 top-1/2 max-md:top-[40%] transform -translate-y-1/2 flex flex-col gap-4 z-30">
       <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="0"></button>
 
-      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="0"></button>
       <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="1"></button>
       <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="2"></button>
       <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="3"></button>
+      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="4"></button>
 
     </div>
   </section>
@@ -712,37 +712,39 @@
   let interval;
 
   function showSlide(index) {
-    slides.forEach((slide, i) => {
-      slide.classList.add('hidden');
-      slide.querySelector('img').classList.remove('zoom-in');
+  slides.forEach((slide, i) => {
+    slide.classList.remove('active');
+    slide.classList.add('hidden'); // optional fallback
 
-      const h2 = slide.querySelector('h2');
-      const p = slide.querySelector('p');
-      const btn = slide.querySelector('a');
+    slide.querySelector('img').classList.remove('zoom-in');
+    const h2 = slide.querySelector('h2');
+    const p = slide.querySelector('p');
+    const btn = slide.querySelector('a');
 
-      h2 && h2.classList.remove('slide-in-left');
-      p && p.classList.remove('slide-in-bottom');
-      btn && btn.classList.remove('slide-in-bottom');
+    h2 && h2.classList.remove('slide-in-left');
+    p && p.classList.remove('slide-in-bottom');
+    btn && btn.classList.remove('slide-in-bottom');
 
-      // Reset dot styles
-      dots[i].classList.remove('opacity-100', 'scale-150');
-      dots[i].classList.add('opacity-50', 'scale-100');
-    });
+    // Reset dot styles
+    dots[i].classList.remove('opacity-100', 'scale-150');
+    dots[i].classList.add('opacity-50', 'scale-100');
+  });
 
-    const activeSlide = slides[index];
-    activeSlide.classList.remove('hidden');
-    activeSlide.querySelector('img').classList.add('zoom-in');
+  const activeSlide = slides[index];
+  activeSlide.classList.add('active');
+  activeSlide.classList.remove('hidden');
 
-    activeSlide.querySelector('h2').classList.add('slide-in-left');
-    activeSlide.querySelector('p').classList.add('slide-in-bottom');
-    activeSlide.querySelector('a').classList.add('slide-in-bottom');
+  activeSlide.querySelector('img').classList.add('zoom-in');
+  activeSlide.querySelector('h2').classList.add('slide-in-left');
+  activeSlide.querySelector('p').classList.add('slide-in-bottom');
+  activeSlide.querySelector('a').classList.add('slide-in-bottom');
 
-    // Set active dot style
-    dots[index].classList.add('opacity-100', 'scale-150');
-    dots[index].classList.remove('opacity-50', 'scale-100');
+  dots[index].classList.add('opacity-100', 'scale-150');
+  dots[index].classList.remove('opacity-50', 'scale-100');
 
-    currentIndex = index;
-  }
+  currentIndex = index;
+}
+
 
   // Dot click
   dots.forEach(dot => {
