--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 <!-- Slide 0 -->
 <div class="absolute inset-0 slide" id="slide0">
-  <img src="./static/images/evs-bg.jpg" class="w-full h-full object-cover zoom-in" />
+  <img src="./static/images/evs.jpg" class="w-full h-full object-cover zoom-in" />
   <div class="absolute inset-0 bg-black bg-opacity-60 overlay hidden"></div>
   <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
     <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">
