--- a/contact.html
+++ b/contact.html
@@ -251,10 +251,13 @@
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8129033332<br>
   <span class="inline-block min-w-[45px]"></span> +91 8589961888<br>
-  <span class="inline-block min-w-[45px]"></span> +91 4842320046
+  <span class="inline-block min-w-[45px]"></span> + 484-232-0046
 </p>
 
-      <p class="mt-2">Email: info@evslogistics.in</p>
+<p class="mt-2">
+  <span>Email: info@evslogistics.in</span><br>
+  <span style="display: inline-block; margin-left: 5ch;">Docs@evslogistics.in</span>
+</p>
     </div>
   </div>
 
