--- a/index.html
+++ b/index.html
@@ -338,8 +338,7 @@
       Trusted Experts in the Field
     </h2>
     <p class="text-gray-600 text-lg max-w-2xl mx-auto">
-      Delivering excellence in global logistics — from garments to machinery with unmatched care.
-    </p>
+Comprehensive logistics for all kinds of products — delivered safely, every time.    </p>
   </div>
 
   <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-4 max-w-7xl mx-auto">
