--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div class="flex flex-col justify-start md:mt-0 mt-6">
       <p class="text-md md:text-lg text-white mb-6 mt-6 md:mt-56 leading-relaxed">
         <span class="text-4xl md:text-6xl ">We</span>
- specialize in reliable and efficient cargo movement by air, sea, and road. With years of experience in international logistics, we ensure seamless delivery of garments, spices, FMCG products, seafood and heavy machinery across the globe.      </p>
+ specialize in reliable and efficient cargo movement by air, sea, and road. With years of experience in international logistics, we ensure seamless delivery of garments, spices, FMCG products, heavy machinery, seafood , vegetables and various products across the globe.      </p>
       <a href="about.html">
         <button class="bg-[#F0C479] hover:bg-[#F0C479] text-[#005EB8] font-semibold px-6 py-3 rounded shadow-md transition-transform transform hover:scale-105 w-fit">
           Know Now
